[package]
name = "main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base = {path = "../base"}
byteorder = "1.4.3"
reqwest = "0.11.11"
dotenv = "0.15.0"
cloud-storage = { git = "https://github.com/mozilla-services/cloud-storage-rs.git", branch="release/0.11.1-client-builder-and-params" }
actix-web = "4.1.0"

log = "0.4.0"
env_logger = "0.9.0"